# bank-ai

./: .env.example  .gitignore  README.md  app.py  bankai_teller_card_ui.html  pyproject.toml  wsgi.py
data/raw/accounts/: README.txt  current_account_opening_india.txt  savings_account_opening_india.txt
data/raw/atm/: atm_usage_india.txt  sample_atm_usage.txt
data/raw/balance/: balance_check_india.txt  sample_balance_check.txt
data/raw/cards/: debit_credit_card_guide_india.txt
data/raw/complaints/: bank_complaint_india.txt
data/raw/deposits/: cash_and_cheque_deposit_india.txt  sample_deposit_process.txt
data/raw/forms/: bank_form_field_explanations.txt  sample_deposit_slip_fields.txt
data/raw/kyc/: kyc_update_india.txt  sample_kyc_note.txt
data/raw/loans/: bank_loans_india.txt
data/raw/rules/: sample_rules_note.txt
data/raw/transfers/: money_transfer_india.txt
data/raw/withdrawals/: sample_withdrawal_process.txt  withdraw_money_india.txt
docs/: data-guidelines.md  overview.md
scripts/: index_data.py  reindex_documents.py  seed_placeholder.py  verify_setup.py
src/bank_ai/: app_factory.py  config.py  extensions.py
src/bank_ai/constants/: __init__.py  prompts.py  routing.py  settings.py
src/bank_ai/db/: __init__.py  models.py  repositories.py  session.py
src/bank_ai/llm/: __init__.py  groq_client.py  models.py
static/css/: styles.css
static/js/: app.js
templates/: base.html  index.html
tests/: conftest.py  test_chat_service.py  test_ocr.py  test_rag_retrieval.py  test_response_service.py  test_routes.py  test_session_service.py
(+32 files in other folders)
